fix: enhance toggle switch styles for improved dark mode experience

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -275,10 +275,6 @@
   transition: 0.4s;
 }
 
-.dark-mode .slider {
-  background-color: #ccc;
-}
-
 .slider:before {
   position: absolute;
   content: "";
@@ -286,43 +282,23 @@
   width: 13px;
   left: 2px;
   bottom: 2px;
-  background-color: #000000d0;
+  background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
-input:checked + .slider:before {
-  background-color: #ccc;
-}
-
-.dark-mode input:checked + .slider:before {
-  background-color: #000000d0;
-}
-
-.dark-mode .slider:before {
-  background-color: #ccc;
-}
-
 input:checked + .slider {
-  background-color: #000000d0;
-}
-
-.dark-mode input:checked + .slider {
-  background-color: #000000d0;
+  background-color: #336699;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #000000d0;
-}
-
-.dark-mode input:focus + .slider {
-  box-shadow: 0 0 1px #ccc;
+  box-shadow: 0 0 1px #336699;
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(13px);
-  -ms-transform: translateX(13px);
-  transform: translateX(13px);
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 /* Rounded sliders */
@@ -331,5 +307,5 @@ input:checked + .slider:before {
 }
 
 .slider.round:before {
-  border-radius: 50%;
+  border-radius: 25%;
 }
